# SumItbot

./: .gitignore  README.md  bot.py  config.py  pyproject.toml  requirements.txt
handlers/: summary_handlers.py
utils/: __init__.py  summarizer.py
